CSS: corrective spacing, dark-theme coga
Yellow is a harsh color for people who deal with overstimulation; soften
it up a bit.

--- a/assets/css/dark.css
+++ b/assets/css/dark.css
@@ -8,16 +8,16 @@
 	.skip {
 		/* "background" is short for a bunch of unnecessary CSS rules
 		 * background-color is all I need */
-		background-color: #0e0e0e;
+		background-color: #0e0e0b;
 	}
 
 	/* Only color <a> if it's a link; if href is empty, let it be. */
 	a:link {
-		color: #fe8;
+		color: #ffeab3;
 	}
 
 	a:visited {
-		color: #edc;
+		color: #ffdfff;
 	}
 
 	a:active {
